# bouncingBalls

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  backend_config.json  balls.cpp  build.sh  server.cpp  test
backend/include/: balls.h
backend/src/: balls.cpp  server.cpp
compiledProtos/cpp/: bouncingBallsMessages.pb.cc  bouncingBallsMessages.pb.h  bouncingBallsMsg.pb.cc  bouncingBallsMsg.pb.h
compiledProtos/python/: bouncingBallsMessages_pb2.py  bouncingBallsMsg_pb2.py
frontend/: bouncingBallsGUI.py  bouncingBallsMessages_pb2.py  bouncingBallsMessages_pb2.pyi  client.py  config.txt  gui.py  requirements.txt
protos/: bouncingBallsMessages.proto  bouncingBallsMsg.proto  compile_protos.sh
